--- a/actor.html
+++ b/actor.html
@@ -2,12 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Actor Films</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Actor's Films</title>
+    <link rel="stylesheet" href="css/actor.css"/>
 </head>
 <body>
 
 <div class="container">
-
+    <div class="notice-container">
+        <p class="notice"></p>
+        <a href="/">Back to home</a>
+    </div>
+    <div class="films-container"></div>
 </div>
 
 <script src="js/actor.js"></script>
